Tests: improve coverage & bug fixes